--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
   <h3>Education</h3>
   <ul>
-    <li><a href="brainline.co.za">Brainline Home Schooling</a></li>
-    <li><a href="ctutrainingsolutions.co.za">CTU Training Solutions</a></li>
+    <li>Brainline Home Schooling</li>
+    <li>CTU Training Solutions</li>
   </ul>
 
 <hr size="3" noshade>
@@ -40,7 +40,7 @@
     <tbody>
       <tr>
         <td>2009-2015</td>
-        <td>Sales at Groencor Furniture</td>
+        <td>Sales at <a href:"http://www.groencorfurniture.co.za">Groencor Furniture</a></td>
       </tr>
       <tr>
         <td>2016-2020</td>
