--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <tbody>
       <tr>
         <td>2009-2015</td>
-        <td>Sales at <a href:"http://www.groencorfurniture.co.za">Groencor Furniture</a></td>
+        <td>Sales at <a href="http://www.groencorfurniture.co.za">Groencor Furniture</a></td>
       </tr>
       <tr>
         <td>2016-2020</td>
